@@ -1,3 +1,5 @@
+11.nov (la)
+      - add /close-all and /open osc messages
 10.nov (ws)
       - removed Painter() wrapper
 5.nov (ws)
